# SFML-Tutorials

./: main.cpp
YoutubeSimpleSFML/: CMakeLists.txt  Game.cpp  main.cpp
YoutubeSimpleSFML/include/: Game.h
